Mon Aug 28 11:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/taodefaults.mpb:
          Added exceptions as base project, TAO requires native C++ exceptions.

Mon Aug 28 11:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/RMCast/RMCast.mpc:
          Removed avoids usage, that is already in the base projects

Mon Aug 28 11:13:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Set ignore prefix in several files to improve generated
          documentation

Mon Aug 28 11:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/acexml.doxygen:
          Ignore ACEXML_ as prefix

Mon Aug 28 10:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/run_test.txt:
          Updated to explain how the script works on VxWorks and extended
          the exampl in such a way that if there is not an executable
          it returns directly

Mon Aug 28 10:07:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Added UUIDTest, was just not listed in this file

        * bin/PerlACE/ProcessVX_Unix.pm:
          New initial file for running tests for VxWorks from an unix host

        * bin/PerlACE/ProcessVX.pm:
          On unix use the new file above

Mon Aug 28 09:05:20 UTC 2006  Boris Kolpackov  <boris@codesynthesis.com>

        * bin/ace_tests.lst:

          Copied test exclusion list from the Multicast_Test entry.

        * protocols/tests/RMCast/Protocol.h:
        * protocols/tests/RMCast/run_test.pl:

          Adjusted the timeout value and message size.

Sun Aug 27 11:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added twoway DII collocation test

Sun Aug 27 00:03:07 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Filecache.cpp (ACE_Filecache_Object): Added a call to
