@@ -23,8 +23,6 @@
 #   pragma once
 # endif /* ACE_LACKS_PRAGMA_ONCE */
 
-# if !defined (ACE_LACKS_MIN_MAX_TEMPLATES)
-
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 template <class T>
@@ -63,15 +61,6 @@ ace_range (const T &min, const T &max, const T &val)
 }
 
 ACE_END_VERSIONED_NAMESPACE_DECL
-
-# else
-// These macros should only be used if a C++ compiler can't grok the
-// inline templates
-#  define ace_min(a,b)      (((b) > (a)) ? (a) : (b))
-#  define ace_max(a,b)      (((a) > (b)) ? (a) : (b))
-#  define ace_range(a,b,c)  (ace_min(ace_max((a), (c)), (b))
-
-# endif /* ACE_LACKS_MIN_MAX_TEMPLATES */
 
 # define ACE_MIN(a,b)     ace_min((a),(b))
 # define ACE_MAX(a,b)     ace_max((a),(b))
