@@ -1,3 +1,14 @@
+Mon Aug 28 13:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Svc_Conf_Lexer.cpp:
+          Fixed variable not used warning when ACE_USES_WCHAR is not
+          defined
+
+        * ace/Min_Max.h:
+          Removed ACE_LACKS_MIN_MAX_TEMPLATES and the code that was
+          there when this define was set, this define wasn't enabled
+          in any configuration file.
+
 Mon Aug 28 11:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/MakeProjectCreator/config/taodefaults.mpb:
